<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>systems.intino</groupId>
		<artifactId>datamarts</artifactId>
		<version>1.0.0-SNAPSHOT</version>
	</parent>

	<groupId>systems.intino.datamarts</groupId>
	<artifactId>subject-store</artifactId>
	<version>1.0.0</version>
	<description>SubjectStore is a data management library for tracking time-stamped attributes associated with a
		subject, enabling the integration of partial and dynamic data from multiple sources without enforcing a rigid
		data schema.
	</description>
	<url>https://github.com/intino/subject-store</url>
	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>josejuanhernandez</id>
			<name>Jose Juan Hernandez</name>
			<email>josejuanhernandez@gmail.com</email>
			<url>https://github.com/josejuanhernandez</url>
			<organization>intino.systems</organization>
			<organizationUrl>https://www.intino.io</organizationUrl>
		</developer>
		<developer>
			<id>octavioroncal</id>
			<name>Octavio Roncal</name>
			<email>octavioroncal11@gmail.com</email>
			<url>https://github.com/octavioroncal</url>
			<organization>intino.systems</organization>
			<organizationUrl>https://www.intino.io</organizationUrl>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/tuusuario/tu-proyecto</url>
		<connection>scm:git:https://github.com/intino/subject-store.git</connection>
		<developerConnection>scm:git@github.com:intino/subject-store.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.2.7</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
						<configuration>
							<keyname>${gpg.keyname}</keyname>
							<passphraseServerId>${gpg.keyname}</passphraseServerId>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.11.2</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>0.7.0</version>
				<extensions>true</extensions>
				<configuration>
					<publishingServerId>intino-sonatype</publishingServerId>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-nop</artifactId>
			<version>2.0.16</version>
		</dependency>
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.49.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.tdunning</groupId>
			<artifactId>t-digest</artifactId>
			<version>3.3</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.26.3</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>